--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -1,127 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/driver_activity"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/driver_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ru.android_studio.gibdd_servis.MainActivity">
 
     <include layout="@layout/toolbar" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView2"
-        android:layout_alignParentStart="true"
-        android:scrollIndicators="right"
         android:layout_above="@+id/NavigationLinearLayout"
-        android:layout_below="@+id/toolbar">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar"
+        android:scrollIndicators="right">
 
         <LinearLayout
             android:id="@+id/menuLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_below="@+id/toolbar"
             android:layout_margin="20dp"
-            android:layout_below="@+id/toolbar">
-    
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/series_license_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Серия водительского удостоверения"
-                android:textSize="18sp"
-                android:id="@+id/series_license_text_view" />
-    
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
             <EditText
+                android:id="@+id/series_license_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="77AA"
                 android:maxLength="4"
-                android:maxLines="1"
-                android:id="@+id/series_license_edit_text" />
+                android:maxLines="1" />
 
             <Button
+                android:id="@+id/camera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="С камеры"
-                android:id="@+id/camera"
-                android:layout_gravity="right" />
+                android:layout_gravity="right"
+                android:text="С камеры" />
 
             <ImageView
                 android:id="@+id/result_camera"
                 android:layout_width="50dp"
                 android:layout_height="50dp" />
-    
+
             <TextView
+                android:id="@+id/number_license_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Номер водительского удостоверения"
-                android:textSize="18sp"
-                android:id="@+id/number_license_text_view" />
-    
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
             <EditText
+                android:id="@+id/number_license_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="000000"
                 android:inputType="number"
                 android:maxLength="6"
-                android:maxLines="1"
-                android:id="@+id/number_license_edit_text" />
-    
+                android:maxLines="1" />
+
             <TextView
+                android:id="@+id/DateOfIssueTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Дата выдачи"
-                android:textSize="18sp"
-                android:id="@+id/DateOfIssueTextView" />
-    
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
             <LinearLayout
+                android:id="@+id/DateOfIssueLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:id="@+id/DateOfIssueLinearLayout">
-    
+                android:orientation="horizontal">
+
                 <EditText
                     android:id="@+id/date_of_issue_edit_text"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:gravity="center"
                     android:maxLength="10"
-                    android:maxLines="1"
-                    android:layout_gravity="center">
-                </EditText>
-    
+                    android:maxLines="1"></EditText>
+
                 <ImageButton
                     android:id="@+id/calendar"
                     android:layout_width="54dp"
                     android:layout_height="45dp"
                     android:cropToPadding="true"
-                    android:src="@drawable/calendar"
-                    android:scaleType="centerInside"/>
+                    android:scaleType="centerInside"
+                    android:src="@drawable/calendar" />
             </LinearLayout>
-    
+
             <TextView
+                android:id="@+id/CuptureTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Введите символы с картинки"
-                android:textSize="18sp"
-                android:id="@+id/CuptureTextView" />
-    
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
             <ImageView
+                android:id="@+id/captcha_image_view"
                 android:layout_width="182dp"
-                android:layout_height="50dp"
-                android:id="@+id/captcha_image_view" />
-    
+                android:layout_height="50dp" />
+
             <EditText
+                android:id="@+id/captcha_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="5"
-                android:maxLines="1"
-                android:id="@+id/captcha_edit_text" />
-    
+                android:maxLines="1" />
+
             <Button
                 android:id="@+id/check_button"
                 android:layout_width="match_parent"
@@ -129,89 +132,92 @@
                 android:layout_gravity="bottom|center"
                 android:background="@drawable/button_check"
                 android:paddingTop="10dp"
-                android:textColor="@drawable/text_button"
-                android:text="@string/btn_check"/>
-    
+                android:text="@string/btn_check"
+                android:textColor="@drawable/text_button" />
+
         </LinearLayout>
     </ScrollView>
 
+
     <LinearLayout
-            android:id="@+id/NavigationLinearLayout"
-            android:orientation="horizontal"
+        android:id="@+id/NavigationLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/bottom_menu_border"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true">
+            android:layout_height="1dp"
+            android:background="@color/bottom_menu_border" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:orientation="horizontal">
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" >
-            </View>
+                android:layout_weight="1"></View>
 
             <ImageButton
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
                 android:id="@+id/menu_fine_btn"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_fine_off"
-                android:background="@android:color/transparent" />
+                android:src="@drawable/menu_fine_off" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" >
-            </View>
+                android:layout_weight="1"></View>
 
             <ImageButton
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
                 android:id="@+id/menu_driver_btn"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_driver_on"
-                android:background="@android:color/transparent" />
+                android:src="@drawable/menu_driver_on" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" >
-            </View>
+                android:layout_weight="1"></View>
 
             <ImageButton
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
                 android:id="@+id/menu_car_btn"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_auto_off"
-                android:background="@android:color/transparent" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1" >
-            </View>
-
-            <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:id="@+id/menu_question_btn"
                 android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_question_off"
-                android:background="@android:color/transparent" />
+                android:src="@drawable/menu_auto_off" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" >
-            </View>
+                android:layout_weight="1"></View>
+
+            <ImageButton
+                android:id="@+id/menu_question_btn"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
+                android:scaleType="centerInside"
+                android:src="@drawable/menu_question_off" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"></View>
 
         </LinearLayout>
-
+    </LinearLayout>
 </RelativeLayout>
